# watsana

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  watsana-development.cfg.simple
scripts/: format.sh  run-web
watsana/: default_settings.py
watsana/cmd/: web.py
watsana/models/: __init__.py  students.py  users.py
watsana/web/: __init__.py  caches.py  oauth2.py
watsana/web/forms/: __init__.py  accounts.py  students.py
watsana/web/static/: package-lock.json  package.json
watsana/web/templates/accounts/: edit-profile.html  index.html  login.html
watsana/web/templates/admin/: index.html
watsana/web/templates/admin/classes/: create-edit.html  index.html  project-renderer.html  view.html
watsana/web/templates/admin/students/: create-edit.html  import-student-from-file.html  index.html  list-brother.html  show-brother.html
watsana/web/templates/admin/users/: index.html  view.html
watsana/web/templates/base/: analytic.html  banner.html  base-layout.html  default-dashboard.html  default-page.html  error-handler.html  footer.html  html-renderer.html  project-material-renderer.html  toolbar-dashboard.html  toolbar.html
watsana/web/templates/dashboard/: index-admin.html  index.html
watsana/web/templates/sites/: index.html
watsana/web/views/: accounts.py  dashboard.py  sites.py
watsana/web/views/admin/: __init__.py  students.py  users.py
