[tool.poetry]
name = "watsana"
version = "0.1.0"
description = ""
authors = ["R202"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "2.2.5"
flask-mongoengine = "^1.0.0"
Werkzeug = "3.1.3"
Flask-Login = "0.6.3"
pillow = "11.0.0"
authlib = "1.3.2"
pandas = "2.2.3"
odfpy = "^1.4.1"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.3"
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.poetry.scripts]
watsana-web = "watsana.cmd.web:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
